# u3d

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
assets/: cube.dae  vertex.glsl
demo/: CMakeLists.txt
demo/assets/: cube.mtl  fragment.glsl  vertex.glsl
demo/src/: main.cpp
example/: CMakeLists.txt
example/demo/: CMakeLists.txt
example/demo/assets/: fragment.glsl  vertex.glsl
example/demo/src/: main.cpp
example/test/: CMakeLists.txt
example/test/src/: main.cpp
flightview/: CMakeLists.txt  main.cpp
flightview/assets/models/: rocket.blend
game/: CMakeLists.txt  main.cpp
game/assets/: fragment.glsl  vertex.glsl
lib/: Assets.cpp  Assets.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Context.cpp  Context.hpp  Cube.cpp  FirstPersonCamera.cpp  FirstPersonCamera.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Mouse.cpp  Object3D.cpp  Object3D.hpp  Scene.cpp  Scene.hpp  Shader.inl  TestMesh.hpp  Texture.cpp  Texture.hpp  Triangle.cpp  UniversalShader.cpp  UniversalShader.hpp  Util.cpp  Util.hpp  u3d.hpp
src/: Assets.cpp  Assets.hpp  Camera.cpp  Camera.hpp  Context.cpp  Context.hpp  Cube.cpp  Cube.hpp  FirstPersonCamera.cpp  FirstPersonCamera.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Mouse.cpp  Mouse.hpp  Object3D.cpp  Object3D.hpp  Scene.hpp  Shader.cpp  Shader.hpp  Shader.inl  TestMesh.cpp  Texture.cpp  Texture.hpp  Triangle.hpp  Util.cpp  Util.hpp  gl_includes.hpp  main.cpp  texture.cpp
tests/: CMakeLists.txt  main.cpp
u3d/: CMakeLists.txt
u3d/src/: Camera.cpp  Camera.hpp  Context.cpp  Context.hpp  Mesh.cpp  Mesh.hpp  ObjLoader.cpp  ObjLoader.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Util.cpp  Util.hpp  u3d.hpp
